--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.1.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "covid19-api": "^1.2.1",
     "cross-env": "^7.0.3",
+    "mongoose": "^6.1.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
