--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "compression": "^1.7.4",
     "connect-redis": "^6.0.0",
     "covid19-api": "^1.2.1",
     "cross-env": "^7.0.3",
+    "express-rate-limit": "^6.2.0",
     "express-session": "^1.17.2",
+    "helmet": "^4",
     "mongoose": "^6.1.6",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
